--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf"-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Vita Continuat</title>
-	<link rel="stylesheet" href="mod2-stylesheet.css">
+	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 	
